ログイン -> カレンダー表示

--- a/meshiiru/meshiiru/Base.lproj/Main.storyboard
+++ b/meshiiru/meshiiru/Base.lproj/Main.storyboard
@@ -10,6 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="1XL-Fh-P1j">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLQ-F2-vHS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="ets-cX-Zlo" customClass="LoginViewController" customModule="meshiiru" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WnX-xy-uCq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -27,8 +28,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="f9V-66-B2w"/>
                     </view>
+                    <connections>
+                        <segue destination="fEw-I3-QxO" kind="show" identifier="toHome" id="cnt-Xk-3aN"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fLQ-F2-vHS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="123" y="139"/>
         </scene>
@@ -37,44 +40,17 @@
             <objects>
                 <tableViewController id="fEw-I3-QxO" customClass="ScheduleSelectTableViewController" customModule="meshiiru" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n7X-Sb-Vrd">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScheduleSelectTableViewCell" rowHeight="62" id="DOW-8J-6Ky" customClass="ScheduleSelectTableViewCell" customModule="meshiiru" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ScheduleSelectTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="62" id="DOW-8J-6Ky" customClass="ScheduleSelectTableViewCell" customModule="meshiiru" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="62"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DOW-8J-6Ky" id="1cd-bX-gpY">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="62"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7b-bT-N2M">
-                                            <rect key="frame" x="20" y="20.5" width="54" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="54" id="Sts-fI-Ey5"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="tue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PoX-GX-66a">
-                                            <rect key="frame" x="82" y="21" width="51" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="PoX-GX-66a" firstAttribute="leading" secondItem="D7b-bT-N2M" secondAttribute="trailing" constant="8" id="ge9-Or-QqN"/>
-                                        <constraint firstItem="PoX-GX-66a" firstAttribute="centerY" secondItem="1cd-bX-gpY" secondAttribute="centerY" id="mFg-qq-p24"/>
-                                        <constraint firstItem="D7b-bT-N2M" firstAttribute="centerY" secondItem="1cd-bX-gpY" secondAttribute="centerY" id="rmN-R2-5gK"/>
-                                        <constraint firstItem="D7b-bT-N2M" firstAttribute="leading" secondItem="1cd-bX-gpY" secondAttribute="leadingMargin" id="wcf-fG-HgR"/>
-                                    </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="dateLabel" destination="D7b-bT-N2M" id="kqj-oV-FQR"/>
-                                    <outlet property="weekdayLabel" destination="PoX-GX-66a" id="JUs-Af-wKF"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -82,6 +58,7 @@
                             <outlet property="delegate" destination="fEw-I3-QxO" id="htR-nG-QS4"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="TC0-Qg-WvW"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="63j-rb-9KG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
