--- a/meshiiru/meshiiru/Views/ScheduleSelectTableViewCell.xib
+++ b/meshiiru/meshiiru/Views/ScheduleSelectTableViewCell.xib
@@ -9,10 +9,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScheduleSelectTableViewCell" id="KGk-i7-Jjw" customClass="ScheduleSelectTableViewCell" customModule="meshiiru" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ScheduleSelectTableViewCell" id="KGk-i7-Jjw" customClass="ScheduleSelectTableViewCell" customModule="meshiiru" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -31,8 +31,12 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="meshiiru_check" translatesAutoresizingMaskIntoConstraints="NO" id="LW5-U7-ssB">
-                        <rect key="frame" x="283" y="8" width="28" height="28"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="meshiiru_check" translatesAutoresizingMaskIntoConstraints="NO" id="LW5-U7-ssB">
+                        <rect key="frame" x="272" y="8" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="PSQ-QV-udw"/>
+                            <constraint firstAttribute="width" constant="40" id="TsY-v5-Uth"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
